--- a/testPin-C011F6.ioc
+++ b/testPin-C011F6.ioc
@@ -9,6 +9,43 @@ ADC1.master=1
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+Dma.Request0=USART1_TX
+Dma.Request1=USART1_RX
+Dma.RequestsNb=2
+Dma.USART1_RX.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART1_RX.1.EventEnable=DISABLE
+Dma.USART1_RX.1.Instance=DMA1_Channel2
+Dma.USART1_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_RX.1.MemInc=DMA_MINC_ENABLE
+Dma.USART1_RX.1.Mode=DMA_NORMAL
+Dma.USART1_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_RX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_RX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.USART1_RX.1.Priority=DMA_PRIORITY_LOW
+Dma.USART1_RX.1.RequestNumber=1
+Dma.USART1_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.USART1_RX.1.SignalID=NONE
+Dma.USART1_RX.1.SyncEnable=DISABLE
+Dma.USART1_RX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.USART1_RX.1.SyncRequestNumber=1
+Dma.USART1_RX.1.SyncSignalID=NONE
+Dma.USART1_TX.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART1_TX.0.EventEnable=DISABLE
+Dma.USART1_TX.0.Instance=DMA1_Channel1
+Dma.USART1_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_TX.0.MemInc=DMA_MINC_ENABLE
+Dma.USART1_TX.0.Mode=DMA_NORMAL
+Dma.USART1_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_TX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_TX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.USART1_TX.0.Priority=DMA_PRIORITY_LOW
+Dma.USART1_TX.0.RequestNumber=1
+Dma.USART1_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.USART1_TX.0.SignalID=NONE
+Dma.USART1_TX.0.SyncEnable=DISABLE
+Dma.USART1_TX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.USART1_TX.0.SyncRequestNumber=1
+Dma.USART1_TX.0.SyncSignalID=NONE
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.CustomTiming=Enabled
@@ -19,13 +56,14 @@ Mcu.CPN=STM32C011F6U3
 Mcu.Family=STM32C0
 Mcu.IP0=ADC1
 Mcu.IP1=CORTEX_M0+
-Mcu.IP2=I2C1
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SYS
-Mcu.IP6=USART1
-Mcu.IP7=USART2
-Mcu.IPNb=8
+Mcu.IP2=DMA
+Mcu.IP3=I2C1
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SYS
+Mcu.IP7=USART1
+Mcu.IP8=USART2
+Mcu.IPNb=9
 Mcu.Name=STM32C011F(4-6)Ux
 Mcu.Package=UFQFPN20
 Mcu.Pin0=PF2-NRST
@@ -48,6 +86,8 @@ Mcu.UserConstants=
 Mcu.UserName=STM32C011F6Ux
 MxCube.Version=6.9.2
 MxDb.Version=DB.6.0.92
+NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Channel2_3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.I2C1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
@@ -132,7 +172,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,0-MX_CORTEX_M0+_Init-CORTEX_M0+-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,0-MX_CORTEX_M0+_Init-CORTEX_M0+-false-HAL-true
 RCC.ADCFreq_Value=48000000
 RCC.AHBFreq_Value=48000000
 RCC.APBFreq_Value=48000000
