--- a/testPin-C011F6.ioc
+++ b/testPin-C011F6.ioc
@@ -67,20 +67,23 @@ Mcu.IPNb=9
 Mcu.Name=STM32C011F(4-6)Ux
 Mcu.Package=UFQFPN20
 Mcu.Pin0=PF2-NRST
-Mcu.Pin1=PA1
-Mcu.Pin10=PB7
-Mcu.Pin11=VP_SYS_VS_Systick
-Mcu.Pin12=VP_SYS_VS_PINREMAP
-Mcu.Pin13=VP_SYS_VS_PINREMAP_10_12
-Mcu.Pin2=PA2
-Mcu.Pin3=PA3
-Mcu.Pin4=PA5
-Mcu.Pin5=PA7
-Mcu.Pin6=PA8
-Mcu.Pin7=PA9 [PA11]
-Mcu.Pin8=PA10 [PA12]
-Mcu.Pin9=PB6
-Mcu.PinsNb=14
+Mcu.Pin1=PA0
+Mcu.Pin10=PA9 [PA11]
+Mcu.Pin11=PA10 [PA12]
+Mcu.Pin12=PB6
+Mcu.Pin13=PB7
+Mcu.Pin14=VP_SYS_VS_Systick
+Mcu.Pin15=VP_SYS_VS_PINREMAP
+Mcu.Pin16=VP_SYS_VS_PINREMAP_10_12
+Mcu.Pin2=PA1
+Mcu.Pin3=PA2
+Mcu.Pin4=PA3
+Mcu.Pin5=PA4
+Mcu.Pin6=PA5
+Mcu.Pin7=PA6
+Mcu.Pin8=PA7
+Mcu.Pin9=PA8
+Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32C011F6Ux
@@ -88,6 +91,7 @@ MxCube.Version=6.9.2
 MxDb.Version=DB.6.0.92
 NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Channel2_3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.EXTI0_1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.I2C1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
@@ -96,6 +100,8 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:false\:true\:false
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+PA0.Locked=true
+PA0.Signal=GPXTI0
 PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=XSHUT1
 PA1.Locked=true
@@ -109,10 +115,19 @@ PA2.Signal=USART2_TX
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=GPIO2
+PA4.Locked=true
+PA4.Signal=GPIO_Input
 PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=XSHUT2
 PA5.Locked=true
 PA5.Signal=GPIO_Output
+PA6.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA6.GPIO_Label=GPIO3
+PA6.GPIO_PuPd=GPIO_NOPULL
+PA6.Locked=true
+PA6.Signal=GPIO_Input
 PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=XSHUT3
 PA7.Locked=true
@@ -196,6 +211,8 @@ RCC.MCO2PinFreq_Value=48000000
 RCC.PWRFreq_Value=48000000
 RCC.SYSCLKFreq_VALUE=48000000
 RCC.USART1Freq_Value=48000000
+SH.GPXTI0.0=GPIO_EXTI0
+SH.GPXTI0.ConfNb=1
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USART2.IPParameters=VirtualMode-Asynchronous
@@ -208,3 +225,4 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=STM32C0116-DK
 boardIOC=true
+isbadioc=false
